style: улучшил читаемость кода