@@ -4,9 +4,9 @@ import org.springframework.stereotype.Repository;
 import ru.yandex.practicum.filmorate.model.Film;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -71,6 +71,6 @@ public class InMemoryFilmRepository implements FilmRepository {
 
     @Override
     public Collection<Film> getCommonFilms(long userId, long friendId) {
-        return List.of();
+        return Collections.emptyList();
     }
 }
